{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 10,
  "lineage": "0512e9ab-589a-667c-f035-b8f800f2dc60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "xact-backend-alb-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:loadbalancer/app/xact-backend-alb-prod/4c6ea141e7ea072c",
            "arn_suffix": "app/xact-backend-alb-prod/4c6ea141e7ea072c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "xact-backend-alb-prod-896871281.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:loadbalancer/app/xact-backend-alb-prod/4c6ea141e7ea072c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "xact-backend-alb-prod",
            "security_groups": [
              "sg-0d99810de72b30a53"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0184ccf3faa75628d"
              },
              {
                "subnet_id": "subnet-02249a393eb372da6"
              },
              {
                "subnet_id": "subnet-042b76f3f4aa643c9"
              }
            ],
            "subnets": [
              "subnet-0184ccf3faa75628d",
              "subnet-02249a393eb372da6",
              "subnet-042b76f3f4aa643c9"
            ],
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "vpc_id": "vpc-09fe503df0ac56522",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb-sg-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:listener/app/xact-backend-alb-prod/4c6ea141e7ea072c/f32499aba3c615ad",
            "certificate_arn": "arn:aws:acm:ap-south-1:730911736748:certificate/4b530396-acfa-40b2-8e05-f5def63db12d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:targetgroup/xact-backend-tg-prod/792313a7528b3614",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:listener/app/xact-backend-alb-prod/4c6ea141e7ea072c/f32499aba3c615ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:loadbalancer/app/xact-backend-alb-prod/4c6ea141e7ea072c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.xact-backend-alb-prod",
            "aws_lb_target_group.xact-backend-tg-prod",
            "aws_security_group.alb-sg-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "xact-backend-tg-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:targetgroup/xact-backend-tg-prod/792313a7528b3614",
            "arn_suffix": "targetgroup/xact-backend-tg-prod/792313a7528b3614",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730911736748:targetgroup/xact-backend-tg-prod/792313a7528b3614",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "xact-backend-tg-prod",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09fe503df0ac56522"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730911736748:security-group/sg-0d99810de72b30a53",
            "description": "Allow ALB Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d99810de72b30a53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow from Personal CIDR block",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg-prod",
            "name_prefix": "",
            "owner_id": "730911736748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB  SG"
            },
            "tags_all": {
              "Name": "ALB  SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe503df0ac56522"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730911736748:security-group/sg-001960e1c682f6e7b",
            "description": "Allow ECS Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001960e1c682f6e7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow from Personal CIDR block",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d99810de72b30a53"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs_prod_sg",
            "name_prefix": "",
            "owner_id": "730911736748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS  SG"
            },
            "tags_all": {
              "Name": "ECS  SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe503df0ac56522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg-prod"
          ]
        }
      ]
    }
  ]
}